tests/instantiating/trigger_invalid_type/stderr.golden
error: in-trigger property must be of type string, current type time
bus.fbd +3:18
   |
 3 |     in-trigger = 15 ns
   |                  ^^^^^
